--- a/austro/ui/mainwindow.ui
+++ b/austro/ui/mainwindow.ui
@@ -334,17 +334,22 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
            <item>
-            <widget class="QTreeWidget" name="treeMemory">
-             <column>
-              <property name="text">
-               <string notr="true">Address</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Data</string>
-              </property>
-             </column>
+            <widget class="QTableView" name="treeMemory">
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
+             <property name="gridStyle">
+              <enum>Qt::NoPen</enum>
+             </property>
+             <property name="wordWrap">
+              <bool>false</bool>
+             </property>
+             <attribute name="verticalHeaderVisible">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="verticalHeaderDefaultSectionSize">
+              <number>18</number>
+             </attribute>
             </widget>
            </item>
           </layout>
