Added syntax highlighting to assembly editor

--- a/austro/ui/mainwindow.ui
+++ b/austro/ui/mainwindow.ui
@@ -262,7 +262,7 @@
               <widget class="CodeEditor" name="asmEdit">
                <property name="font">
                 <font>
-                 <family>Monospace</family>
+                 <family>DejaVu Sans Mono</family>
                  <pointsize>10</pointsize>
                 </font>
                </property>
