GUI: Generic Registers tree working

--- a/austro/ui/mainwindow.ui
+++ b/austro/ui/mainwindow.ui
@@ -47,98 +47,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout">
             <item>
-             <widget class="QTreeWidget" name="treeGenericRegs">
-              <column>
-               <property name="text">
-                <string notr="true">Name</string>
-               </property>
-              </column>
-              <column>
-               <property name="text">
-                <string>Data</string>
-               </property>
-              </column>
-              <item>
-               <property name="text">
-                <string>AX</string>
-               </property>
-               <item>
-                <property name="text">
-                 <string>AH</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>AL</string>
-                </property>
-               </item>
-              </item>
-              <item>
-               <property name="text">
-                <string>BX</string>
-               </property>
-               <item>
-                <property name="text">
-                 <string>BH</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>BL</string>
-                </property>
-               </item>
-              </item>
-              <item>
-               <property name="text">
-                <string>CX</string>
-               </property>
-               <item>
-                <property name="text">
-                 <string>CH</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>CL</string>
-                </property>
-               </item>
-              </item>
-              <item>
-               <property name="text">
-                <string>DX</string>
-               </property>
-               <item>
-                <property name="text">
-                 <string>DH</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>DL</string>
-                </property>
-               </item>
-              </item>
-              <item>
-               <property name="text">
-                <string>SP</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>BP</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>SI</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>DI</string>
-               </property>
-              </item>
-             </widget>
+             <widget class="QTreeView" name="treeGenericRegs"/>
             </item>
            </layout>
           </widget>
