GUI: about Qt action

--- a/austro/ui/mainwindow.ui
+++ b/austro/ui/mainwindow.ui
@@ -226,6 +226,7 @@
      <string>&amp;Help</string>
     </property>
     <addaction name="actionAbout"/>
+    <addaction name="actionAboutQt"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
@@ -468,6 +469,11 @@
    </property>
    <property name="statusTip">
     <string>Sobre o Simulador Austro</string>
+   </property>
+  </action>
+  <action name="actionAboutQt">
+   <property name="text">
+    <string>About &amp;Qt</string>
    </property>
   </action>
  </widget>
