GUI: enabled console area to show lexer errors

--- a/austro/ui/mainwindow.ui
+++ b/austro/ui/mainwindow.ui
@@ -145,7 +145,7 @@
           </widget>
           <widget class="QTabWidget" name="bottomTabWidget">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <widget class="QWidget" name="tabConsole">
             <attribute name="title">
